@@ -12,7 +12,7 @@ if(BUILD_WITH_QT6)
   set(QT_MAJOR_VERSION "6")
 else()
   message(STATUS "Building good old Qt5 version")
-  set(KF_MIN_VERSION "5.78.0")
+  set(KF_MIN_VERSION "5.84.0")
   set(KF_MAJOR_VERSION "5")
   set(QT_MIN_VERSION "5.15.0")
   set(QT_MAJOR_VERSION "5")
